@@ -7,8 +7,8 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 10/10/2021
-# Data de atualização: 18/10/2021
-# Versão: 0.06
+# Data de atualização: 20/10/2021
+# Versão: 0.07
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 # Testado e homologado para a versão do Bind DNS Sever v9.16.x
 #
@@ -21,6 +21,7 @@
 #
 # Diretório das Zonas de Pesquisa Direta e Reversa do Bind DNS Server:
 # Localização: /var/lib/bind/
+#
 # Monitoramento do Log do Bind DNS Server: tail -f /var/log/syslog | grep named
 #
 # Site Oficial do Projeto Bind: https://www.isc.org/bind/
@@ -55,7 +56,8 @@ clear
 echo
 #
 echo -e "Instalação do Bind DNS Server no GNU/Linux Ubuntu Server 20.04.x\n"
-echo -e "Porta padrão utilizada pelo Bind9 DNS Server.: UDP 53\n"
+echo -e "Porta padrão utilizada pelo Bind9 DNS Server.: UDP 53"
+echo -e "Porta padrão utilizada pelo RNDC.: TCP 953\n"
 echo -e "Aguarde, esse processo demora um pouco dependendo do seu Link de Internet...\n"
 sleep 5
 #
@@ -144,8 +146,8 @@ echo -e "Atualizando os arquivos de configuração do Bind DNS Server, aguarde..
 	mv -v /etc/bind/named.conf /etc/bind/named.conf.old &>> $LOG
 	mv -v /etc/bind/named.conf.local /etc/bind/named.conf.local.old &>> $LOG
 	mv -v /etc/bind/named.conf.options /etc/bind/named.conf.options.old &>> $LOG
+	mv -v /etc/bind/rndc.key /etc/bind/rndc.key.old &>> $LOG
 	mv -v /etc/default/named /etc/default/named.old &>> $LOG
-	mv -v /etc/default/rndc.key /etc/default/rndc.key.old &>> $LOG
 	cp -v conf/{named.conf,named.conf.local,named.conf.options,rndc.key} /etc/bind/ &>> $LOG
 	cp -v conf/{pti.intra.hosts,172.16.1.rev} /var/lib/bind/ &>> $LOG
 	cp -v conf/dnsupdate-cron /etc/cron.d/dnsupdate-cron &>> $LOG
@@ -178,7 +180,7 @@ sleep 5
 echo -e "Editando o arquivo de configuração rndc.key, pressione <Enter> para continuar."
 	# opção do comando: &>> (redirecionar a saida padrão)
 	read
-	vim /etc/default/rndc.key
+	vim /etc/bind/rndc.key
 echo -e "Arquivo editado com sucesso!!!, continuando com o script...\n"
 sleep 5
 #
@@ -223,13 +225,15 @@ echo -e "Inicializando os serviços do Bind DNS Server e do Netplan, aguarde..."
 echo -e "Serviços inicializados com com sucesso!!!, continuando com o script...\n"
 sleep 5
 #
-echo -e "Verificando a porta de conexão do Bind DNS Server, aguarde..."
+echo -e "Verificando as portas de conexões do Bind DNS Server, aguarde..."
 	# opção do comando lsof: -n (inhibits the conversion of network numbers to host names for 
 	# network files), -P (inhibits the conversion of port numbers to port names for network files), 
 	# -i (selects the listing of files any of whose Internet address matches the address specified 
 	# in i), -s (alone directs lsof to display file size at all times)
 	lsof -nP -iUDP:53
-echo -e "Porta verificada com sucesso!!!, continuando com o script...\n"
+	echo
+	lsof -nP -iTCP:953 -sTCP:LISTEN
+echo -e "Portas verificadas com sucesso!!!, continuando com o script...\n"
 sleep 5
 #	
 echo -e "Instalação do Bind DNS Server feita com Sucesso!!!."
