@@ -7,8 +7,8 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 10/10/2021
-# Data de atualização: 17/10/2021
-# Versão: 0.03
+# Data de atualização: 20/10/2021
+# Versão: 0.04
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 # Testado e homologado para a versão do NTP Server v4.2.
 #
@@ -117,14 +117,21 @@ echo -e "Atualizando os arquivos de configuração do NTP Server, aguarde..."
 	mv -v /etc/ntp.conf /etc/ntp.conf.old &>> $LOG
 	cp -v conf/ntp.conf /etc/ntp.conf &>> $LOG
 	cp -v conf/ntp.drift /var/lib/ntp/ntp.drift &>> $LOG
-	chown -v ntp.ntp /var/lib/ntp/ntp.drift &>> $LOG
+	cp -v conf/ntp /etc/default/ntp &>> $LOG
 	cp -v conf/timesyncd.conf /etc/systemd/timesyncd.conf &>> $LOG
+	chown -v ntp.ntp /var/lib/ntp/ntp.drift &>> $LOG
 echo -e "Arquivos do NTP Server atualizados com sucesso!!!, continuando com o script...\n"
 sleep 5
 #
 echo -e "Editando o arquivo de configuração ntp.conf, pressione <Enter> para continuar"
 	read
 	vim /etc/ntp.conf
+echo -e "Arquivo editado com sucesso!!!, continuando com o script...\n"
+sleep 5
+#
+echo -e "Editando o arquivo de configuração ntp, pressione <Enter> para continuar"
+	read
+	vim /etc/default/ntp
 echo -e "Arquivo editado com sucesso!!!, continuando com o script...\n"
 sleep 5
 #
