@@ -6,19 +6,33 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 10/10/2021
-# Data de atualização: 11/10/2021
-# Versão: 0.02
+# Data de atualização: 20/10/2021
+# Versão: 0.03
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
+# Mais informações veja o arquivo: scripts/settings/04-ConfiguracaoDoNetplan.sh
 #
+# Configuração do Endereço IPv4 do Ubuntu Server
 network:
+  # Configuração do Protocolo Ethernet do Ubuntu Server
   ethernets:
+    # Configuração da Placa de Rede do Ubuntu Server
     enp0s3:
+      # Configuração do Endereço IPv4 Dinâmico via DHCP do Ubuntu Server
+      # OBSERVAÇÃO: por padrão o endereço IPv4 dinâmico em servidores não é utilizado
+      #dhcp4: true
+      # Configuração do Endereço IPv4 e CIDR Estático do Ubuntu Server
       addresses:
       - 172.16.1.20/24
+      # Configuração do Endereço de Gateway IPv4 do Ubuntu Server
       gateway4: 172.16.1.254
+      # Configuração dos Endereços de DNS Server IPv4 do Ubuntu Server
       nameservers:
         addresses:
+        #- 172.16.1.20
         - 172.16.1.254
+        #- 8.8.8.8
+        #- 8.8.8.8
+        # Configuração do Nome de Pesquisa DNS do Ubuntu Server
         search:
         - pti.intra
   version: 2
