@@ -6,8 +6,8 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 10/10/2021
-# Data de atualização: 13/10/2021
-# Versão: 0.01
+# Data de atualização: 20/10/2021
+# Versão: 0.02
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 # Mais informações sobre as configurações do ntp.conf acesse os sites:
@@ -19,11 +19,19 @@
 driftfile /var/lib/ntp/ntp.drift
 
 # Estatísticas do ntp que permitem verificar o histórico de funcionamento e gerar gráficos
+enable stats
 statsdir /var/log/ntpstats/
 statistics loopstats peerstats clockstats
 filegen loopstats file loopstats type day enable
 filegen peerstats file peerstats type day enable
 filegen clockstats file clockstats type day enable
+
+# Configuração do Logo do NTP Server
+logconfig =syncall +clockall
+
+# Configuração da Interface de Rede permitida do NTP Server
+interface ignore all
+interface listen enp0s3
 
 # Servidores públicos do projeto ntp.br com suporte ao IPv4 e IPv6
 server a.st1.ntp.br iburst
@@ -40,9 +48,9 @@ server c.ntp.br iburst
 # Configurações de restrição de acesso do NTP
 restrict 127.0.0.1
 restrict 127.0.1.1
-restrict ::1
-restrict default kod notrap nomodify nopeer noquery
-restrict -6 default kod notrap nomodify nopeer noquery
+restrict -6 ::1
+restrict default kod limited nomodify notrap nopeer noquery
+restrict -6 default kod limited nomodify notrap nopeer noquery
 
 # Desabilitar o comando monlist
 disable monitor
