@@ -11,9 +11,15 @@ Versão: 0.08
 Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 ============================================= ATUALIZAÇÕES DOS SCRIPTS =============================================
+20/10/2021 - Robson Vaamonde - Acréscimo da configuração do arquivo de configuração da Placa de Rede do Netplan no
+script: 02-openssh.sh, backup e atualização do arquivo 00-installer-config.yaml customizado, correção da falha de 
+edição do arquivo rndc.key no script: 03-dns.sh, acréscimo da verificação da porta TCP 953 no script: 03-dns.sh,
+melhoria no script: 04-dhcpdns.sh na geração da chave TSIG, criação do arquivo ntp com suporte somente ao IPv4 e
+acréscimo da edição do arquivo no script: 05-ntp.sh, melhoria no arquivo de configuração ntp.conf, 
+
 19/10/2021 - Robson Vaamonde - Criação do arquivo HELP, nesse arquivo está os procedimentos básicos para utilizar os
-scripts desse curso, todo os procedimentos básicos de utilizar esse repositório para customizar os scripts ou arquivos
-confs para o seu cenário.
+scripts desse curso, todo os procedimentos básicos para utilizar esse repositório e customizar os scripts ou arquivos
+configurações para o seu cenário.
 
 18/10/2021 - Robson Vaamonde - Acréscimo do bloco de verificação de dependências no script: 04-dhcpdns.sh, correção
 e atualização dos arquivos de configuração do Vsftpd Server, customização do script 10-wordpress.sh, criação das
